<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_background"
    tools:context=".ui.firstscreen.MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icPhoto"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_photo"
        app:shapeAppearanceOverlay="@style/CircularShape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutName"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/icPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutPalindrome"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/name"
            android:textSize="14sp"
            android:textColorHint="@color/inputText"
            android:textAlignment="textStart"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPalindrome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPalindrome"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/palindrome"
            android:textSize="14sp"
            android:textColorHint="@color/inputText"
            android:textAlignment="textStart"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCheck"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/check"
        android:backgroundTint="@color/primary"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPalindrome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNext"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/next"
        android:backgroundTint="@color/primary"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>